--- a/mySimmple_Stock2.ipynb
+++ b/mySimmple_Stock2.ipynb
@@ -661,6 +661,140 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from pandas_datareader import data\n",
+    "import mplfinance as mpf\n",
+    "\n",
+    "import tkinter as tk\n",
+    "import tkinter.ttk as ttk\n",
+    "import datetime\n",
+    "import time\n",
+    "import csv\n",
+    "import os\n",
+    "import sys\n",
+    "from PIL import Image\n",
+    "#数値を画面に出力するための関数\n",
+    "csvfile_path = './stocklist.csv'\n",
+    "df = pandas.read_csv(csvfile_path)\n",
+    "\n",
+    "def draw_graph():\n",
+    "    #テキストボックスの内容を取得\n",
+    "    global number, start, end\n",
+    "    number2=str(number.get())\n",
+    "    start2 =str(start.get())\n",
+    "    end2   =str(end.get())\n",
+    "    filename = number2+'.png'\n",
+    "    #株式データの取得\n",
+    "    df = data.DataReader(number2, 'stooq', start2, end2)\n",
+    "    df = df.sort_index()\n",
+    "    #グラフの描画と保存\n",
+    "    mpf.plot(df, title='\\n'+number2, type='candle', mav=(5, 25), volume=True, savefig=filename)\n",
+    " \n",
+    "    #画像のサイズ取得\n",
+    "    img = Image.open(filename)\n",
+    "    width = img.width\n",
+    "    height = img.height\n",
+    " \n",
+    "    #サブウィンドウの追加\n",
+    "    sub = tk.Toplevel()\n",
+    "    sub.title(number2)\n",
+    "    sub.geometry(str(width)+\"x\"+str(height))\n",
+    "    #グラフの描画\n",
+    "    graph = tk.PhotoImage(file=filename)\n",
+    "    canvas = tk.Canvas(sub,bg='white', width = width, height = height)\n",
+    "    canvas.place(x=0, y=0)\n",
+    "    canvas.create_image(0,0,image=graph, anchor=tk.NW)\n",
+    "\n",
+    "#数値を画面に出力するための関数\n",
+    "def search_table():\n",
+    "    global name, df\n",
+    "    name2=str(name.get())\n",
+    "    df_part = df[df['銘柄名'].str.contains(name2)]\n",
+    "    df_part_str=df_part.astype(str)\n",
+    "    #サブウィンドウの追加\n",
+    "    sub = tk.Toplevel()\n",
+    "    sub.title(\"search\")\n",
+    "    sub.geometry(\"500x500\")\n",
+    "    #グラフの描画\n",
+    "    search_label = ttk.Label(\n",
+    "        sub,\n",
+    "        text=df_part_str,\n",
+    "        width=50,\n",
+    "        relief=tk.SUNKEN,\n",
+    "    )\n",
+    "    search_label.grid(row=0, column=0, padx=20, pady=5)\n",
+    "\n",
+    "# トップレベルウィンドウ作成\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "\n",
+    "name_label = ttk.Label(\n",
+    "    root,\n",
+    "    text=\"name\",\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "name_label.grid(row=0, column=0, padx=20, pady=5)\n",
+    "\n",
+    "name = tk.Entry(root,width=20)\n",
+    "name.grid(row=0, column=1, padx=10, pady=5)\n",
+    "\n",
+    "get = tk.StringVar(root)\n",
+    "get.set(\"GET!\")\n",
+    "get_button = tk.Button(root, textvariable=get, command=search_table)\n",
+    "get_button.grid(row=0, column=3, padx=10, pady=5)\n",
+    "    \n",
+    "\n",
+    "number_label = ttk.Label(\n",
+    "    root,\n",
+    "    text=\"num\",\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "number_label.grid(row=1, column=0, padx=20, pady=5)\n",
+    "\n",
+    "start_label = ttk.Label(\n",
+    "    root,\n",
+    "    text=\"start\",\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "start_label.grid(row=2, column=0, padx=20, pady=5)\n",
+    "\n",
+    "end_label = ttk.Label(\n",
+    "    root,\n",
+    "    text=\"end\",\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "end_label.grid(row=3, column=0, padx=20, pady=5)\n",
+    "\n",
+    "\n",
+    "number = tk.Entry(width=20)\n",
+    "number.grid(row=1, column=1, padx=10, pady=5)\n",
+    "start = tk.Entry(width=20)\n",
+    "start.grid(row=2, column=1, padx=10, pady=5)\n",
+    "end = tk.Entry(width=20)\n",
+    "end.grid(row=3, column=1, padx=10, pady=5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "draw = tk.StringVar(root)\n",
+    "draw.set(\"DRAW!\")\n",
+    "draw_button = tk.Button(root, textvariable=draw, command=draw_graph)\n",
+    "draw_button.grid(row=3, column=1, padx=10, pady=5)\n",
+    "\n",
+    "\n",
+    "root.mainloop()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
