se end to today

--- a/search_and_graph.ipynb
+++ b/search_and_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d05c28a4-db1b-411f-9e7a-e8b8c6809f7a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "\n",
     "import tkinter as tk\n",
     "import tkinter.ttk as ttk\n",
-    "import datetime\n",
+    "import datetime as dt\n",
     "import time\n",
     "import csv\n",
     "import os\n",
@@ -22,13 +22,14 @@
     "#数値を画面に出力するための関数\n",
     "csvfile_path = './stocklist.csv'\n",
     "df = pandas.read_csv(csvfile_path)\n",
+    "now = dt.datetime.now()\n",
     "\n",
     "def draw_graph():\n",
     "    #テキストボックスの内容を取得\n",
     "    global number, start, end\n",
     "    number2=str(number.get())+\".JP\"\n",
     "    start2 =str(start.get())\n",
-    "    end2   =str(end.get())\n",
+    "    end2 = now.strftime('%Y-%m-%d')\n",
     "    filename = number2+'.png'\n",
     "    #株式データの取得\n",
     "    df = data.DataReader(number2, 'stooq', start2, end2)\n",
@@ -107,23 +108,11 @@
     ")\n",
     "start_label.grid(row=2, column=0, padx=20, pady=5)\n",
     "\n",
-    "end_label = ttk.Label(\n",
-    "    root,\n",
-    "    text=\"end\",\n",
-    "    width=5,\n",
-    "    relief=tk.SUNKEN,\n",
-    ")\n",
-    "end_label.grid(row=3, column=0, padx=20, pady=5)\n",
-    "\n",
     "\n",
     "number = tk.Entry(width=20)\n",
     "number.grid(row=1, column=1, padx=10, pady=5)\n",
     "start = tk.Entry(width=20)\n",
     "start.grid(row=2, column=1, padx=10, pady=5)\n",
-    "end = tk.Entry(width=20)\n",
-    "end.grid(row=3, column=1, padx=10, pady=5)\n",
-    "\n",
-    "\n",
     "\n",
     "draw = tk.StringVar(root)\n",
     "draw.set(\"DRAW!\")\n",
@@ -132,6 +121,14 @@
     "\n",
     "root.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a18f316-7e2c-4d11-9d4f-6285ec12cce5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
