--- a/search_and_graph.ipynb
+++ b/search_and_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d05c28a4-db1b-411f-9e7a-e8b8c6809f7a",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,24 @@
     "import os\n",
     "import sys\n",
     "from PIL import Image\n",
+    "\n",
+    "from tkcalendar import Calendar\n",
+    "\n",
+    "\n",
     "#数値を画面に出力するための関数\n",
-    "csvfile_path = './stocklist.csv'\n",
+    "csvfile_path = './data/stocklist.csv'\n",
     "df = pandas.read_csv(csvfile_path)\n",
-    "now = dt.datetime.now()\n",
     "\n",
     "def draw_graph():\n",
     "    #テキストボックスの内容を取得\n",
-    "    global number, start, end\n",
+    "    global number, calender_date\n",
     "    number2=str(number.get())+\".JP\"\n",
-    "    start2 =str(start.get())\n",
-    "    end2 = now.strftime('%Y-%m-%d')\n",
+    "    start = calender_date.get_date().split(\"/\")\n",
+    "    start = '20'+start[2]+'-'+start[0]+'-'+start[1]\n",
+    "    end = dt.datetime.now().strftime('%Y-%m-%d')\n",
     "    filename = number2+'.png'\n",
     "    #株式データの取得\n",
-    "    df = data.DataReader(number2, 'stooq', start2, end2)\n",
+    "    df = data.DataReader(number2, 'stooq', start, end)\n",
     "    df = df.sort_index()\n",
     "    #グラフの描画と保存\n",
     "    mpf.plot(df, title='\\n'+number2, type='candle', mav=(5, 25), volume=True, savefig=filename)\n",
@@ -73,7 +77,7 @@
     "\n",
     "# トップレベルウィンドウ作成\n",
     "root = tk.Tk()\n",
-    "\n",
+    "root.title(\"search_and_drawgraph_system\")\n",
     "\n",
     "name_label = ttk.Label(\n",
     "    root,\n",
@@ -98,21 +102,16 @@
     "    width=5,\n",
     "    relief=tk.SUNKEN,\n",
     ")\n",
+    "number_label.config(background='white')\n",
     "number_label.grid(row=1, column=0, padx=20, pady=5)\n",
-    "\n",
-    "start_label = ttk.Label(\n",
-    "    root,\n",
-    "    text=\"start\",\n",
-    "    width=5,\n",
-    "    relief=tk.SUNKEN,\n",
-    ")\n",
-    "start_label.grid(row=2, column=0, padx=20, pady=5)\n",
-    "\n",
     "\n",
     "number = tk.Entry(width=20)\n",
     "number.grid(row=1, column=1, padx=10, pady=5)\n",
-    "start = tk.Entry(width=20)\n",
-    "start.grid(row=2, column=1, padx=10, pady=5)\n",
+    "calender_date = Calendar(root,background=\"black\", disabledbackground=\"black\", bordercolor=\"black\", \n",
+    "               headersbackground=\"black\", normalbackground=\"black\", foreground='white', \n",
+    "               normalforeground='white', headersforeground='white',date_patternstr = 'y-mm-dd')\n",
+    "calender_date.grid(row=2, column=1)\n",
+    "\n",
     "\n",
     "draw = tk.StringVar(root)\n",
     "draw.set(\"DRAW!\")\n",
@@ -147,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
