--- a/search_and_graph.ipynb
+++ b/search_and_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d05c28a4-db1b-411f-9e7a-e8b8c6809f7a",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,64 @@
     "    #株式データの取得\n",
     "    df = data.DataReader(number2, 'stooq', start, end)\n",
     "    df = df.sort_index()\n",
+    "\n",
+    "    #MACDの計算\n",
+    "    exp12 = df['Close'].ewm(span=12, adjust=False).mean()\n",
+    "    exp26 = df['Close'].ewm(span=26, adjust=False).mean()\n",
+    "    df['MACD'] = exp12 - exp26\n",
+    "    # シグナル計算\n",
+    "    df['Signal'] = df['MACD'].rolling(window=9).mean()\n",
+    "    # ヒストグラム(MACD - シグナル)\n",
+    "    df['Hist'] = df['MACD'] - df['Signal']\n",
+    "    #一目均衡表 9、26、52日間のMAX、MIN値の計算\n",
+    "\n",
+    "    max_9 = df['High'].rolling(window=9, min_periods=1).max()\n",
+    "    min_9 = df['Low'].rolling(window=9, min_periods=1).min()\n",
+    "\n",
+    "    max_26 = df['High'].rolling(window=26, min_periods=1).max()\n",
+    "    min_26 = df['Low'].rolling(window=26, min_periods=1).min()\n",
+    "\n",
+    "    max_52 = df['High'].rolling(window=52).max()\n",
+    "    min_52 = df['Low'].rolling(window=52).min()\n",
+    "\n",
+    "    # ５本線の計算\n",
+    "\n",
+    "    df['tenkan'] = (max_9 + min_9)/2\n",
+    "    df['base'] = (max_26 + min_26)/2\n",
+    "    df['senkou1'] = ((df['tenkan'] + df['base'])/2).iloc[:-26]\n",
+    "    df['senkou2'] = ((max_52 + min_52)/2).iloc[:-26]\n",
+    "    df['chikou'] = df['Close'].iloc[:-26]\n",
+    "\n",
+    "    #RSI(相対力指数)\n",
+    "    # 終値の差分\n",
+    "\n",
+    "    df_diff = df['Close'].diff()\n",
+    "\n",
+    "    # 値上がり幅と値下がり幅\n",
+    "\n",
+    "    df_up, df_down = df_diff.copy(), df_diff.copy()\n",
+    "    df_up[df_up < 0] = 0\n",
+    "    df_down[df_down > 0] = 0\n",
+    "    df_down = df_down * -1\n",
+    "\n",
+    "    # 14日間の単純移動平均\n",
+    "\n",
+    "    sim14_up = df_up.rolling(window=14).mean()\n",
+    "    sim14_down = df_down.rolling(window=14).mean()\n",
+    "\n",
+    "    # RSI\n",
+    "    df['RSI'] = sim14_up / (sim14_up + sim14_down) * 100\n",
+    "\n",
+    "    add_plot = [mpf.make_addplot(df['MACD'], color='m', panel=1, secondary_y=False),\n",
+    "            mpf.make_addplot(df['Signal'], color='c', panel=1, secondary_y=False),\n",
+    "            mpf.make_addplot(df['Hist'], type='bar', color='g', panel=1, secondary_y=True)\n",
+    "            mpf.make_addplot(df['base'], color='black'),\n",
+    "            mpf.make_addplot(df['tenkan'], color='red'),\n",
+    "            mpf.make_addplot(df['chikou'], color='darkorange'),\n",
+    "            mpf.make_addplot(df['RSI'], panel=2),\n",
+    "            ]\n",
+    "\n",
+    "\n",
     "    #グラフの描画と保存\n",
     "    mpf.plot(df, title='\\n'+number2, type='candle', mav=(5, 25), volume=True, savefig=filename)\n",
     " \n",
@@ -107,10 +165,31 @@
     "\n",
     "number = tk.Entry(width=20)\n",
     "number.grid(row=1, column=1, padx=10, pady=5)\n",
+    "\n",
+    "date_label = ttk.Label(\n",
+    "    root,\n",
+    "    text=\"date\",\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "date_label.grid(row=2, column=0, padx=20, pady=5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "calender_date = Calendar(root,background=\"black\", disabledbackground=\"black\", bordercolor=\"black\", \n",
     "               headersbackground=\"black\", normalbackground=\"black\", foreground='white', \n",
-    "               normalforeground='white', headersforeground='white',date_patternstr = 'y-mm-dd')\n",
-    "calender_date.grid(row=2, column=1)\n",
+    "               normalforeground='white', headersforeground='white',showweeknumbers=False,date_patternstr = 'y-mm-dd')\n",
+    "calender_date.grid(row=3, column=1)\n",
+    "\n",
+    "date = ttk.Label(\n",
+    "    root,\n",
+    "    text=calender_date.get_date(),\n",
+    "    width=5,\n",
+    "    relief=tk.SUNKEN,\n",
+    ")\n",
+    "date.grid(row=2, column=1, padx=20, pady=5)\n",
+    "\n",
     "\n",
     "\n",
     "draw = tk.StringVar(root)\n",
